--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
                 <h1>Amoba játék</h1>
             </header>
             <article>
-                <div></div>
+                <h2>Mekora pályán szeretne játszani?</h2>   
+                 <button id="ok3">3x3</button>
+                 <button id="ok4">5x5</button>
+                 <button id="ok10">10x10</button>
+             
             </article>
             <footer>
-                <button name="uj jatek">Új játék</button>
+                <button name="ujjatek">Új játék</button>
             </footer>
             
         </main>
